<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:shrinkColumns="0"
    android:stretchColumns="2"
    android:collapseColumns="2">

    <TableRow
        android:layout_marginTop="40dp"
        android:id="@+id/tablerow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/weather"
            android:layout_weight="1"
            android:layout_width="205dp"
            android:layout_height="200dp"
            android:text="@string/weather"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="#FF9800"
            android:background="@drawable/pull"
            />
        <Button
            android:id="@+id/music"
            android:layout_weight="1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:text="@string/music"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="#FF9800"
            android:background="@drawable/music"
            />


    </TableRow>

    <TableRow
        android:layout_marginTop="20dp"
        android:id="@+id/tablerow2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/history"
            android:layout_weight="1"
            android:layout_width="205dp"
            android:layout_height="200dp"
            android:text="@string/history"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="#FF9800"
            android:background="@drawable/history"
            />

        <Button
            android:id="@+id/tips"
            android:layout_weight="1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:text="@string/tips"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="#FF9800"
            android:background="@drawable/tips"
            />
    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_width="200dp"
        android:layout_height="200dp">
        <Button
            android:id="@+id/run"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:text="@string/run"
            android:textSize="80sp"
            android:textStyle="normal"
            android:textColor="#4CAF50"
            android:background="@drawable/run"
            />
    </TableRow>
</TableLayout>