<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"

    android:background="@drawable/good_morning_img"

    tools:context=".ui.RegstActivity">

    <EditText
        android:fontFamily="@font/calibri"
        android:layout_marginTop="160dp"
        android:id="@+id/username"
        android:maxLength="16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="输入账号" />
    <EditText
        android:layout_marginTop="20dp"
        android:fontFamily="@font/calibri"
        android:maxLength="16"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="输入密码" />
    <EditText
        android:layout_marginTop="20dp"
        android:fontFamily="@font/calibri"
        android:maxLength="16"
        android:id="@+id/passwordend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="确认密码" />
    <EditText
        android:layout_marginTop="20dp"
        android:fontFamily="@font/calibri"
        android:maxLength="31"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="请输入邮箱" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText

            android:fontFamily="@font/calibri"
            android:maxLength="6"
            android:inputType="numberDecimal"
            android:id="@+id/setemail"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="输入验证码" />
        <Button
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:background="@drawable/buttonshapewhitebg"
            android:fontFamily="@font/calibri"
            android:id="@+id/getemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="获取验证码" />
    </LinearLayout>

    <Button
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshapewhitebg"
        android:fontFamily="@font/calibri"
        android:id="@+id/btn_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="注册" />
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="15dp"
            android:textColor="@color/colorAccent"
            android:text="@string/xy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
<!--            <RadioButton-->
<!--                android:id="@+id/xy1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/ysxy"
                android:gravity="center"
                android:textColor="@color/purple_700"
                android:text="@string/ysxy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/yhxy"
            android:gravity="center"

            android:textColor="@color/purple_700"
            android:text="@string/yhxy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        </LinearLayout>
<!--            <RadioButton-->
<!--                android:id="@+id/xy2"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->


    </LinearLayout>


</LinearLayout>
